Fixes Error prone null checks in Bunsen module